chore: update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,40 @@
+# java objects
 *.class
+*.jar
+
+# dependency
+!junit.jar
+!sax2.jar
+
+# Gradle
 .gradle
+!gradle-wrapper.jar
+
+# Build
+out
+build
+bin
+
+# Eclipse
+.project
+.classpath
+.settings
+
+# Idea
+.idea
+*.iml
+*.iws
+*.ipr
+
+# OS
+Thumbs.db
+.DS_Store
+
+# Maven
+target
+
+# Others
+*.log
+*.swp
+*.bak
+
