chore: update build configuration
- Add distAllZip task
- Fix to bundle scripts
- Refactoring apps folder

--- a/apps/tabby/build.gradle
+++ b/apps/tabby/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'application'
 }
 
+applicationName = 'tabby'
+
 application {
     mainClass = 'org.htmlparser.lexerapplications.tabby.Tabby'
 }
